<resources>
    <string name="app_name">Výjezdy HZS JMK</string>
    <string name="action_settings">Nastavení</string>
    <string name="loading_feeds">Načítám výjezdy</string>
    <string name="cancel">Zpět</string>
    <string name="feed_title">Název kanálu</string>
    <string name="source">Zdroj</string>
    <string name="source_name">Název zdroje</string>
    <string name="feed_url">URL kanálu</string>
    <string name="save">Uložit</string>
    <string name="add_feed_title">Přidat kanál</string>
    <string name="add_feed">Přidejte svůj vlastní RSS kanál</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto">sans-serif</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="monospace">monospace</string>
    <string name="okres">Okres</string>
    <string name="category">Kategorie</string>
    <string name="add_category">Přidat kategorii</string>
    <string name="source_url">Zdrojivá URL</string>
    <string name="pub_date">Datum zveřejnění</string>
    <string name="clear_feeds">Vymazat kanály</string>
    <string name="navigation_drawer_open">Otevřít navigační menu</string>
    <string name="navigation_drawer_close">Zavřít navigační menu</string>
    <string-array name="category_names">
        <item>Požár</item>
        <item>Dopravní nehoda</item>
        <item>Technická pomoc</item>
        <item>Záchrana osob/zvířat</item>
        <item>Chemické látky</item>
        <item>Ostatní</item>
    </string-array>
    <string-array name="feed_table_columns">
        <item>item_name</item>
        <item>item_desc</item>
        <item>item_district</item>
        <item>item_link</item>
        <item>item_img_url</item>
        <item>item_category</item>
        <item>item_source</item>
        <item>item_source_url</item>
        <item>item_pub_date</item>
        <item>item_category_img_id</item>
        <item>item_desc_web</item>
    </string-array>
    <string-array name="source_table_columns">
        <item>source_name</item>
        <item>source_url</item>
        <item>source_category</item>
        <item>source_category_img_id</item>
    </string-array>
    <string-array name="article_table_columns">
        <item>article_name</item>
        <item>article_desc</item>
        <item>article_district</item>
        <item>article_link</item>
        <item>article_img_url</item>
        <item>article_category</item>
        <item>article_source</item>
        <item>article_source_url</item>
        <item>article_pub_date</item>
        <item>article_category_img_id</item>
        <item>article_content</item>
    </string-array>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="action_share">Sdílet výjezd</string>
    <string name="action_archive">Archive</string>
    <string name="content">Content</string>
    <string name="please_wait">Please wait</string>
    <string name="loading">Loading</string>
    <string name="nav_feeds">Výjezdy</string>
    <string name="nav_other">Ostatní</string>
    <string name="nav_extra">Extra</string>
    <string name="nav_settings">Nastavení</string>
    <string name="nav_about">O aplikaci</string>
    <string name="nav_archive">Archiv</string>
    <string name="remove_archive">Odebrat z archivu</string>
    <string name="remove_archive_content">Tato akce trvale odstraní tento článek z vašeho archivu.</string>
    <string name="remove">Odebrat</string>
    <string name="modify">Upravit</string>
    <string name="delete">Smazat</string>
    <string name="title_activity_settings">Nastavení</string>
    <string name="sort">Řazení</string>
    <string name="sort_it">OK</string>
    <string name="sort_feeds">Řazení výjezdů podle</string>
    <string-array name="sort_feeds_types">
        <item>Náhodně</item>
        <item>Názvu</item>
        <item>Kategorie</item>
        <item>Datumu</item>
    </string-array>
    <string name="notifications">Oznámení o nových výjezdech</string>
    <string name="notifications_summaryoff">Pokud toto zapnete, budete dostávat oznámení nových výjezdů</string>
    <string name="notifications_summaryon">Pokud toto vypnete, nebudete dostávat oznámení nových výjezdů</string>
    <string name="notifications_district">district</string>
    <string name="novy_vyjezd_channel">Nový výjezd</string>
    <string-array name="notification_districts_entries">
        <item>Žádné oznámení</item>
        <item>Všechny okresy</item>
        <item>Blansko</item>
        <item>Brno-město</item>
        <item>Brno-venkov</item>
        <item>Břeclav</item>
        <item>Hodonín</item>
        <item>Vyškov</item>
        <item>Znojmo</item>
    </string-array>
    <string-array name="notification_districts_values">
        <item>Žádné oznámení</item>
        <item>Všechny okresy</item>
        <item>Blansko</item>
        <item>Brno-město</item>
        <item>Brno-venkov</item>
        <item>Břeclav</item>
        <item>Hodonín</item>
        <item>Vyškov</item>
        <item>Znojmo</item>
    </string-array>
    <string name="perf_ui">User Interface</string>
    <string name="perf_feeds">Kanály</string>
    <string name="perf_feeds_font_size">Velikost písma kanálů</string>
    <string name="perf_feeds_font_size_desc">Spravovat velikost písma RSS kanálů</string>
    <string name="perf_feeds_font_size_key">perf_feeds_font_size</string>
    <string-array name="perf_feeds_font_size_entries">
        <item>Malá</item>
        <item>Střední</item>
        <item>Velká</item>
    </string-array>
    <string-array name="perf_feeds_font_size_entry_values">
        <item>Malá</item>
        <item>Střední</item>
        <item>Velká</item>
    </string-array>
    <string name="perf_article">Článek</string>
    <string name="perf_article_font_size">Velikost písma článku</string>
    <string name="perf_article_font_size_desc">Spravovat velikost písma článku</string>
    <string name="perf_article_font_size_key">perf_article_font_size</string>
    <string-array name="perf_article_font_size_entries">
        <item>Malá</item>
        <item>Střední</item>
        <item>Velká</item>
    </string-array>
    <string-array name="perf_article_font_size_entry_values">
        <item>Malá</item>
        <item>Střední</item>
        <item>Velká</item>
    </string-array>
    <string name="perf_small">Malá</string>
    <string name="perf_medium">Střední</string>
    <string name="perf_large">Velká</string>
    <string name="perf_feeds_anim">Povolit animaci kanálů</string>
    <string name="perf_feeds_anim_desc_enabled">Pokud je vypnuto, kanály nebudou animovány</string>
    <string name="perf_feeds_anim_desc_disabled">Pokud je zapnuto, zdroje budou animovány</string>
    <string name="perf_feeds_anim_key">perf_feeds_anim_key</string>
    <string name="perf_sources_anim">Povolit animaci zdrojů</string>
    <string name="perf_sources_anim_desc_enabled">Pokud je vypnuto, zdroje nebudou animovány</string>
    <string name="perf_sources_anim_desc_disabled">Pokud je zapnuto, zdroje budou animovány</string>
    <string name="perf_sources_anim_key">perf_sources_anim_key</string>
    <string name="perf_circular_reveal">Povolit kruhovou animaci</string>
    <string name="perf_circular_reveal_desc_enabled">Pokud je vypnuto, na obrazovce s přidanými zdroji se nezobrazí kruhové animace</string>
    <string name="perf_circular_reveal_desc_disabled">Pokud je zapnuto, na obrazovce s přidanými zdroji se zobrazí kruhové animace</string>
    <string name="perf_circular_reveal_key">perf_circular_reveal_key</string>
    <string name="perf_theme">Spravovat motivy</string>
    <string name="perf_theme_desc">Změnit systémový motiv</string>
    <string name="perf_theme_key">perf_theme</string>
    <string name="perf_theme_default_value">Světlý</string>
    <string-array name="perf_theme_entries">
        <item>Světlý</item>
        <item>Tmavý</item>
    </string-array>
    <string-array name="perf_theme_values">
        <item>Světlý</item>
        <item>Tmavý</item>
    </string-array>
    <string name="perf_in_app_browser">Povolit prohlížeč v aplikaci</string>
    <string name="perf_in_app_browser_desc_enabled">Pokud je vypnuto, aplikace otevře kanál ve výchozím prohlížeči</string>
    <string name="perf_in_app_browser_desc_disabled">Pokud je zapnuto, aplikace otevře kanál v prohlížeči aplikace(vyžaduje Chrome v45+)</string>
    <string name="perf_in_app_browser_key">perf_in_app_browser_key</string>
    <string name="perf_cache">Ukládání výjezdů do mezipaměti</string>
    <string name="perf_cache_desc_enabled">Pokud je vypnuto, aplikace nebude ukládat stažené zdroje do databáze</string>
    <string name="perf_cache_desc_disabled">Pokud je zapnuto, aplikace bude ukládat stažené zdroje do databáze</string>
    <string name="perf_cache_key">perf_feeds_cache</string>
    <string name="perf_system">Systém</string>
    <string name="perf_reset_db">Resetovat databázi</string>
    <string name="perf_reset_db_desc">Obnoví databázi do původního stavu</string>
    <string name="perf_reset_db_message">Tím se odstraní všechny hodnoty z databáze. To zahrnuje smazání zdrojů, archivů a kanálů.</string>
    <string name="perf_misc">Ostatní</string>
    <string name="perf_feeds_not_working">Kanály nefungují?</string>
    <string name="perf_feeds_not_working_desc">Ne každý zdroj RSS bude fungovat s aplikací správně. Aby to fungovalo, potřebujete změnit své zdroje. Klepnutím sem zobrazíte návod</string>
    <string name="perf_feeds_not_working_key">perf_feeds_not_working_key</string>
    <string name="swipe_down">Aktualizuj potahem dolů</string>
    <string name="archive_empty">Archiv je prázdný</string>
    <string name="action_open_in_browser">Otevřít v prohlížeči</string>
    <string name="refresh">Aktualizovat</string>
    <string name="no_internet_available">Jejda!</string>
    <string name="no_internet_available_extnd">Nelze zjistit připojení k internetu. Zapněte jej v síťových nastaveních.</string>
    <string name="settings">Nastavení</string>
    <string name="dismiss">Jasně</string>
    <string name="clear_feeds_desc">Tímto způsobem by byly smazány všechny dostupné kanály. Neobávejte se, to neresetuje váš archiv.</string>
    <string name="clear">Vyčistit</string>
    <string name="no_content_available">Žádný obsah není k dispozici</string>
    <string name="title_activity_splash">Výjezdy Hasičů Jihomoravského Kraje</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="splash_title_1">Výjezdy Hasičů Jihomoravského Kraje</string>
    <string name="splash_title_2">Možnost výběru okresů</string>
    <string name="splash_title_3">Upozornění na nové výjezdy</string>
    <string name="splash_title_4">Zobrazování detailů výjezdů</string>
    <string name="splash_desc_1">Jednoduchá, chytrá a rychlá aplikace pro zjišťování aktuálních výjezdů HZS JMK!</string>
    <string name="splash_desc_2">Zvolte si váš oblíbený okres a začnětě sledovat výjezdy místních jednotek!</string>
    <string name="splash_desc_3">Budete vědět o všech výjezdech během pár minut díky naším rychlím serverům.</string>
    <string name="splash_desc_4">Jsem první aplikace která dokáže zobrazit detail výjezdu přímo v aplikaci!</string>
    <string name="title_activity_about">O aplikaci</string>
    <string name="created_by">Kartik Sharma\n(Aka Chdev)</string>
    <string name="contact_dev">Kontakt na vývojáře</string>
    <string-array name="contacts">
        <item>Email</item>
        <item>Webové stránky</item>
        <item>GitHub</item>
    </string-array>
    <string name="dev_mail">svandasek@seznam.cz</string>
    <string name="dev_website">http://404.com/</string>
</resources>